fix: aligned the responsive navigation bar by fixing it in the index.css

--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,7 @@ section {
     }
 
     .navlist-fade {
-        top: -40rem;
+        top: -50rem;
     }
 
     .navlist a,
